--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -19,6 +19,15 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to 'Strona główna', root_path %></li>
         <li><%= link_to 'O mnie', about_path %></li>
+
+        <% if user_signed_in? %>
+          <li><%= link_to 'Edycja Profilu', edit_user_registration_path %></li>
+          <li><%= link_to 'Wylogowanie', destroy_user_session_path, method: :delete%></li>
+        <% else %>
+          <li><%= link_to 'Logowanie', new_user_session_path %></li>
+          <li><%= link_to 'Rejestracja', new_user_registration_path%>
+        <% end %>
+
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
