--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -7,6 +7,9 @@
   <%= @pin.description %>
 </p>
 
+<% if @pin.user == current_user %>
+  <%= link_to 'Edit', edit_pin_path(@pin) %>
+<% end %>
   </div>
-  <div class="panel-footer"><%= link_to 'Edit', edit_pin_path(@pin) %> | <%= link_to 'Back', pins_path %></div>
+  <div class="panel-footer"><%= link_to 'Back', pins_path %></div>
 </div>
