--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -1,8 +1,6 @@
-<div class="panel panel-default">
-  <div class="panel-heading"></div>
-  <div class="panel-body">
 
-<%= form_with(model: pin, local: true) do |form| %>
+
+<%= form_with(model: pin, local: true, html: { multipart: true }) do |form| %>
   <% if pin.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(pin.errors.count, "error") %> prohibited this pin from being saved:</h2>
@@ -20,11 +18,14 @@
     <%= form.text_field :description , class: 'form-control'%>
   </div>
 
+  <div class="form-group">
+    <%= form.label :image, 'Image' %>
+    <%= form.file_field :image , class: 'form-control'%>
+  </div>
+
   <div class="actions">
     <%= form.submit class: 'btn btn-primary'%>
   </div>
 <% end %>
 
-  </div>
-  <div class="panel-footer"></div>
-</div>
+  
