--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -3,32 +3,26 @@
   <div class="panel-body">
 <p id="notice"><%= notice %></p>
 
-<table>
-  <thead>
-    <tr>
-      <th>Picture</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @pins.each do |pin| %>
-      <tr>
-        <td><%= image_tag pin.image.url(:medium) %></td>
-        <td><%= pin.description %></td>
-        <td><%= link_to 'Show', pin %></td>
+<div id="pins" class="transitions-enabled">
+  <% @pins.each do |pin| %>
+    <div class="box">
+      <div class="panel panel-default">
+        <%= link_to image_tag(pin.image.url(:medium)), pin %><br/>
+        <div class="panel-body">
+          <%= pin.description %><br/>
+        </div>
         <% if pin.user == current_user %>
-          <td><%= link_to 'Edit', edit_pin_path(pin) %></td>
-          <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <div class="panel-footer">
+          <%= link_to 'Edit', edit_pin_path(pin) %><br/>
+          <%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %><br/>
+        </div>
         <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
+      </div>
+    </div>
+  <% end %>
+</div>
 
   </div>
-  <div class="panel-footer"><%= link_to 'New Pin', new_pin_path %></div>
+  <div class="panel-footer"></div>
 </div>
