--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,16 +1,15 @@
-<div class="panel panel-default">
-  <div class="panel-heading"><h1>This pin</h1></div>
-  <div class="panel-body">
-<p id="notice"><%= notice %></p>
-<p>
-  <%= image_tag @pin.image.url(:medium) %><br/>
-  <strong>Description:</strong>
-  <%= @pin.description %>
-</p>
-
-<% if @pin.user == current_user %>
-  <%= link_to 'Edit', edit_pin_path(@pin) %>
-<% end %>
+<div class="row">
+  <div class="col-md-ffset-2 col-md-8">
+    <div class="panel panel-default">
+      <div class="panel-heading center"><%= image_tag @pin.image.url(:medium) %><br/></div>
+      <div class="panel-body">
+        <%= @pin.description %><br/>
+        <% if @pin.user == current_user %>
+          <%= link_to 'Edit', edit_pin_path(@pin) %>
+        <% end %>
+        <%= link_to 'Back', pins_path %>
+      </div>
+    </div>
   </div>
-  <div class="panel-footer"><%= link_to 'Back', pins_path %></div>
 </div>
+
