--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,6 +12,11 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :name, "Nazwa" %><br />
+    <%= f.text_field :name, class: "form-control", :autofocus => true %>
+  </div>
+
+  <div class="form-group">
     <%= f.label :password %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
