--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -11,11 +11,12 @@
         <%= link_to image_tag(pin.image.url(:medium)), pin %><br/>
         <div class="panel-body">
           <%= pin.description %><br/>
+          <br/><strong><%= pin.user.name if pin.user %></strong><br/>
         </div>
         <% if pin.user == current_user %>
         <div class="panel-footer">
           <%= link_to 'Edit', edit_pin_path(pin) %><br/>
-          <%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %><br/>
+          <%= link_to 'Delete', pin, method: :delete, data: { confirm: 'Are you sure?' } %><br/>
         </div>
         <% end %>
       </div>
